Appmod/java upgrade 20251203151032 (#4)
* Add cross-platform environment setup scripts

Introduces setup_env.sh for macOS/Linux and setup_env.bat for Windows to automate environment verification, dependency installation, compilation, and a quick test run. Updates README with quick setup instructions and clarifies manual installation steps for improved onboarding.

* Upgrade project to use  using openrewrite.

* No code changes - verifying build stability

* Update tests for Bing and improve visual regression logic

PageIntegrationTest assertions updated to use Bing instead of DuckDuckGo, including element selectors. VisualRegressionTest now allows higher tolerance for dynamic content and refines threshold comparison logic for screenshot differences. Updated homepage baseline image for visual tests.

---------

Co-authored-by: Daniel Solis <5098526+dsolisp@users.noreply.github.com>