@@ -14,7 +14,6 @@ import java.io.IOException;
 import java.io.Reader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 
 /**
@@ -31,7 +30,7 @@ public class TestDataManager {
     private final Faker faker;
 
     public TestDataManager() {
-        this(Paths.get("src/test/resources/data"));
+        this(Path.of("src/test/resources/data"));
     }
 
     public TestDataManager(Path dataDir) {
